<resources>
    <string name="app_name">News</string>
    <string name="search_for_news">Search by Keyword…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breaking_news">Breaking News</string>
    <string name="CoronaNews_categories">COVID19 News</string>
    <string name="saved_news">Saved News</string>
    <string name="search_news">Search News</string>
    <string name="add_to_saved_articles">ADD to Saved Articles</string>
    <string name="published_at">DATE</string>
    <string name="title">TITLE</string>
    <string name="source">SOURCE</string>
    <string name="description">DESCRIPTION</string>
    <string name="time">TIME</string>
    <string name="save_articles_tv">Find your Fav Articles here</string>
    <string name="no_articles_tv">No Articles</string>
</resources>
